socket app front

--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,14 @@
     position: absolute;
     right: 0;
     top: 0;
-    background-color: red;
+}
+
+.info{
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    border-radius: 20px;
+    padding: 5px;
+    background-color: rgba(0,0,0,0.2);
+    z-index: 99;
 }
